# EEG_processing_gui

./: PHN-300-flask.py  PHN-300_project.py  Procfile  README.md  config.py  deploy.sh  requirements.txt  stats_dataframe.csv  visualize_dump.json
FLASK_APP/: .env.example  Procfile  config.py  pyproject.toml  requirements.txt  stats_dataframe.csv  table.json  wsgi.py
FLASK_APP/flask_app/: PHN_300_flask.py  __init__.py  aa.py  forms.py  routes.py
FLASK_APP/flask_app/static/css/: forms.css
FLASK_APP/flask_app/templates/: file_upload.html  index.jinja2  success.jinja2
flask_app/: __init__.py  forms.py
flask_app/static/css/: forms.css
flask_app/templates/: feature_selection.jinja2  index.jinja2  layout.jinja2
