[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = "App for EEG Project"
authors = ["Viresh Subham Nitin"]
maintainers = ["Viresh Subham Nitin"]
license = ""
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = [
    "Flask",
    "Forms",
    "Flask-WTF",
    "MVC"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask-wtf = "*"
python-dotenv = "*"
email_validator = "*"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = ""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

